--- a/roshambo.ipynb
+++ b/roshambo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,10 @@
      "output_type": "stream",
      "text": [
       "[8962, 8933, 8989, 8990, 8985]\n",
-      "[8962, 8933, 8989, 8990, 8985]\n"
+      "[8962, 8933, 8989, 8990, 8985]\n",
+      "[(1, 1), (1, 2), (1, 3), (2, 1), (2, 2)]\n",
+      "30\n",
+      "30\n"
      ]
     },
     {
@@ -58,9 +61,14 @@
     "}\n",
     "\n",
     "# Load each .npy file\n",
+    "ids = []\n",
     "data = []\n",
     "for file_path in emg_paths:\n",
     "    arr = np.load(file_path)\n",
+    "    filename = file_path.split(\"/\")[-1]  # Get filename without path\n",
+    "    subject_id = int(filename.split(\"_\")[0].replace(\"subject\", \"\"))  # Get subject ID\n",
+    "    session_id = int(filename.split(\"_\")[1].replace(\"session\", \"\"))  # Get session ID\n",
+    "    ids.append((subject_id, session_id))\n",
     "    data.append(arr)\n",
     "\n",
     "labels = []\n",
@@ -72,6 +80,10 @@
     "# See if the lengths match\n",
     "print([len(x) for x in data[:5]])\n",
     "print([len(x) for x in labels[:5]])\n",
+    "print(ids[:5])\n",
+    "\n",
+    "print(len(data))\n",
+    "print(len(ids))\n",
     "\n",
     "plt.plot(data[0])\n",
     "plt.plot(labels[0] * 3 + 100, label=\"Label\")\n",
